[package]
name = "rumoku"
version = "0.1.0"
edition = "2021"
description = "Gomoku on rust"
readme = "README.md"
repository = "https://github.com/IDestinn/rumoku"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
rand = "0.8"
wasm-logger = "0.2"
gloo = "0.11"
yew = { version = "0.20", features = ["csr"] }
