[package]
name = "rumoku"
version = "0.1.0"
edition = "2021"
description = "Gomoku on rust"
readme = "README.md"
repository = "https://github.com/IDestinn/rumoku"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
